# borghen

./: borghen.pc.in  configure.ac
include/: Makefile.am  borghen.h
lib/: Makefile.am  borghen.c
module/: Makefile.am  apr.c  eina.c  glib.c  interface.h
test/: Makefile.am  apr.c  eina.c  glib.c
